# crypto-forecast-ml-research

./: .python-version  Makefile  README.md  github.txt  pyproject.toml  requirements.txt
models/: 36120-25SP-AT3-25400603-experiment-19_model.joblib  36120-25SP-AT3-25400603-experiment-19_preprocessor.joblib  lasso_model.pkl  lgbm_best_model.joblib  ridge_model.pkl  solana_xgboost.joblib  standard_scaler.pkl  xrp_preprocessing_pipeline.joblib
notebooks/: 2_36120-25SP-AT3-group_13-25552249-Copy1.ipynb  36120-25SP-AT3-25400603-experiment-19.ipynb  36120-25SP-AT3-group13-24996427-AT3-experiment-1.ipynb  36120-25SP-AT3-group_13-25544646.ipynb  36120-25SP-AT3-group_13-25544646_experiment_1.ipynb  36120-25SP-AT3-group_13-25544646_experiment_2.ipynb  36120-25SP-AT3-group_13-25544646_experiment_3.ipynb  36120-25SP-AT3-group_13-25544646_linear_regression.ipynb  36120-25SP-AT3-group_13-25544646_random_forest copy.ipynb  36120-25SP-AT3-group_13-25544646_random_forest.ipynb  36120-25SP-AT3-group_13-25552249.ipynb  3_36120-25SP-AT3-group_13-25552249.ipynb  4_36120-25SP-AT3-group_13-25552249-Copy1.ipynb  6_36120-25SP-AT3-group_13-25552249-Copy1.ipynb  FINAL_5_updated_36120-25SP-AT3-group_13-25552249.ipynb
notebooks/36120-AT3/Ripple/processed/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
notebooks/36120-AT3/models/: lgbm_best_model.joblib  xrp_preprocessing_pipeline.joblib
reports/: ~$120-25SP-AT3-Group13-report.docx
