[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "adv_mla_lab_1"
version = "0.0.1"
description = "Advanced Machine Learning AT1"
authors = [
  { name = "Kittituch Wongwatcharapaiboon" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab (==4.2.3)",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas (==2.2.2)",
    "pip",
    "pytest",
    "python-dotenv",
    "scikit-learn (==1.5.1)",
    "tqdm",
    "typer",
    "joblib (==1.4.2)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lightgbm (==4.4.0)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
]
requires-python = "==3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["adv_mla_lab_1"]
force_sort_within_sections = true


