[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "amla_at3_Group13"
version = "0.0.1"
description = "Advanced Machine Learning Assignment 3"
authors = ["Kittituch"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.11.4"
scikit-learn = "1.5.1"
pandas = "2.2.2"
jupyterlab = "4.2.3"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"
streamlit = "1.36.0"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"
matplotlib = "3.10.7"
seaborn = "0.13.2"
adv-mla-at1-25544646 = {version = "^2025.3.3", source = "testpypi"}


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"