[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "AMLA_AT3_Group13"
version = "0.0.1"
description = "Advanced Machine Assignment 3"
authors = ["Kittituch"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.11.4"
scikit-learn = "1.5.1"
pandas = "2.2.2"
jupyterlab = "4.2.3"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"
streamlit = "1.36.0"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"
my-krml-25400603 = {version = "^2025.0.12", source = "test-pypi"}
catboost = "^1.2.8"
seaborn = "^0.13.2"
shap = "^0.49.1"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

